# codespaces_environment

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
ros2_ws/: configure_workspace.sh
ros2_ws/src/ros2_codespaces_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_codespaces_py/: package.xml  setup.cfg  setup.py
