<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2_codespaces_py</name>
    <version>0.0.1</version>
    <description>ROS2 codespaces py</description>
    <maintainer email="you@email.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>